# ardent-forge

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  DESIGN.md  README.md  TODO.md  docker-compose.yml  eslint.config.js  index.html  mise.toml  package.json  playwright.config.ts  tsconfig.app.json  vercel.json  vite.config.ts  vitest.config.ts
.claude/: .gitignore  settings.json
.claude/agents/: agent-rules.json  backend-engineer.md  check-adr-consistency.md  check-task-completion.md  code-simplifier.md  content-writer.md  debugger-detective.md  deep-researcher.md  (+19 more)
.cortex/: patterns.md  session.md  session.md.bak
.github/: BRANCH_PROTECTION.md  README.md
api/: discovery.ts
docs/: 00-project-overview.md  01-prd-core.md  02-prd-sharing.md  03-prd-hosting.md  04-prd-events.md  05-domain-model.md  06-invariants-additions.md  06-invariants.md  07-architecture-additions.md  07-architecture.md  08-erd.md  09-state-machines.md  10-user-flows-additions.md  10-user-flows.md  11-notification-design.md  12-prd-chat.md  13-prd-remote-display.md  implementation-plan-additions.md  implementation-plan.md  onboarding-refactoring-plans.md  self-hosting.md
e2e/: auth.spec.ts  exercises.spec.ts  helpers.ts  navigation.spec.ts  smoke.spec.ts
maestro/: app-launch.yaml  app-lifecycle.yaml  back-button.yaml  deep-link-auth.yaml  deep-link-connect.yaml  notification-permission.yaml  orientation-change.yaml  qr-scanner.yaml
public/: manifest.webmanifest
scripts/: generate-keys.sh  ranger_ready_seed.sql  seed-display.ts  test-android.sh
src/: index.css  main.tsx  routeTree.gen.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial_schema.sql  002_sync_metadata.sql  003_session_templates.sql  004_programs.sql  005_app_config.sql  006_sharing.sql  007_chat.sql  008_add_display_visible.sql  008_session_template_last_assigned.sql  010_session_overrides.sql  011_add_public_visibility.sql  012_program_week_statuses.sql  013_drop_display_visible.sql  013_workout_note_tags.sql  015_drop_set_notes.sql
src-tauri/src/: db.rs  error.rs  event_reminder.rs  lib.rs  models.rs  notification.rs  rest_timer.rs  session_reminder.rs  utils.rs
src-tauri/src/commands/: app_config.rs  chat.rs  exercises.rs  guest.rs  mod.rs  notification.rs  programs.rs  rest_timer.rs  session_templates.rs  sharing.rs  sync.rs  user_profile.rs  workout_logs.rs
src-tauri/src/sync/: conflict.rs  mod.rs  pull.rs  push.rs  queue.rs
supabase/: config.toml  deno.test.jsonc  seed-reviewer.sql  seed.sql
(+915 files in other folders)
