[package]
name = "ardent-forge"
version = "1.0.0-beta.4"
description = "Fitness and workout tracking application"
authors = ["Robert Hamilton"]
license = "MIT"
repository = "https://github.com/rghsoftware/ardent-forge"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "macros"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.13.2", features = [
  "json",
  "rustls",
], default-features = false }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
url = "2"
tauri-plugin-notification = "2"
tauri-plugin-deep-link = "2"
tokio = { version = "1", features = ["time", "sync"] }
tauri-plugin-opener = "2.5.3"
tauri-plugin-safe-area-insets-css = "0.2"

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-barcode-scanner = "2.4.4"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
